Refactored CineFactoryServiceTest and CsvImporterServiceTest